[workspace]
members = [ "forest-framework" ]
resolver = "2"

[workspace.dependencies]
# runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0.89"
futures-util = "0.3.31"

serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.19"
serde_json = "1.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
async-nats = { version = "0.38.0", features = ["service"] }

[workspace.dependencies.sea-orm]
version = "1.1.2"
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "debug-print",
    "with-uuid",
    "with-chrono",
    "postgres-array",
    "with-rust_decimal",
    "tests-cfg",
]