[package]
name = "forest-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {workspace = true}
async-trait = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_repr = {workspace = true}
serde_json = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
tracing = {workspace = true}
async-nats = {workspace = true}
futures-util = {workspace = true}
sea-orm = {workspace = true, optional = true}
num_cpus = "1.16.0"
bytes = "1.9.0"

[features]
sea_orm = ["dep:sea-orm"]